# HiCCliqueGraphs

./: .gitignore  README.md
GOEA/: GOEAa.py  README.md  runGOEA.py
GOEA/sampleResults/: BasesLogvsLinks1.csv  BasesLogvsLinks2-Blood cell pcHi-CvsRand.csv  CL1vsLinks1-Blood cell pcHi-CvsRand.csv  CL2vsAll-Blood cell pcHi-CvsAllPossible.csv  CL2vsLinks2-Blood cell pcHi-CvsRand.csv  CL5vsLinks2.csv  Links5vsLinks1.csv
SCHiCRank/: .gitignore  README.md  pipeline.md  run_full_100kb_pipeline.sh  setup_schicluster_env.sh
SCHiCRank/imputation/: calc_node_degree.py  convertImputedToScool.py  exportScoolToText.py  (+2 more)
connectedComponents/: .gitignore  README.md  downloadSourceData.py  run-everything-normal-hic.sh  run-everything-pchic.sh
connectedComponents/process-hic/add-states-and-genes/: Cargo.toml
connectedComponents/process-hic/add-states-and-genes/src/: main.rs
encodeCcreCliqueExpressions/: README.md  create_cCRE_plots.R  finalProcess_cCRE.py  header_mapping.json  prepareForcCRE.py
enrichment/: CReader.py  README.md  getStateStats_new.py  supportCalculation.py  topologicalFeatures.py
images/: README.md  all3DSinOne.ipynb  analyzeLinkLengths.ipynb  topologicalFeatures.py
processDifferentDB/: README.md  about.md  processEncodeEnsembl.py
randomization/: README.md
results/: README.md
sampleData/: README.md
topologicalElements/: ALLCHRSelementCountsTable.csv  README.md  compareDatasets.ipynb  elementCountsTable.csv
universal/: README.md  baseBloodHi-C_to_universal.py  baseNormalHi-C_to_universal.py  basePCHi-C_to_universal.py  transformBloodStates.py
(+91 files in other folders)
