[package]
name = "add-states-and-genes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hic-lib = { path = "../hic-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
clap = { version = "4", features = ["derive"] }